ci: Fix bad quotes in release workflow

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -31,7 +31,7 @@ jobs:
 
       - name: Generate SHA256 checksum
         run: |
-          sha256sum octivi-bash-boilerplate > octivi-bash-boilerplate.sha256"
+          sha256sum octivi-bash-boilerplate > octivi-bash-boilerplate.sha256
 
       - name: Publish release
         uses: softprops/action-gh-release@v2
