--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -55,7 +55,7 @@ jobs:
             ## Install
 
             ```
-            sudo curl -fL -o /usr/local/share/octivi-bash-boilerplate https://github.com/${{ env.ORG_NAME }}/${{ env.REPO_NAME }}/releases/download/${{ env.TAG_NAME }}/octivi-bash-boilerplate
+            sudo curl -fsSLo /usr/local/share/octivi-bash-boilerplate https://github.com/${{ env.ORG_NAME }}/${{ env.REPO_NAME }}/releases/download/${{ env.TAG_NAME }}/octivi-bash-boilerplate
             ```
           generate_release_notes: true
           fail_on_unmatched_files: true
