ci: Add specific headers regexp

--- a/.github/workflows/update-year.yml
+++ b/.github/workflows/update-year.yml
@@ -38,6 +38,9 @@ jobs:
 
       - name: Update year in headers
         uses: octivi/update-copyright-year@v1
+        with:
+          headers_regexp: |
+            s/^(.*Copyright[^0-9]*)([0-9]{4})(-[0-9]{4})?([[:space:]]+IMAGIN sp\. z o\.o\.)?$/\1\2-{{CURRENT_YEAR}}\4/
 
       - name: Create Pull Request
         uses: peter-evans/create-pull-request@v8
