feat: add update scripts where OBB was copy-pasted (not sourced)

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -26,3 +26,6 @@ jobs:
 
       - name: Run ShellCheck
         uses: ludeeus/action-shellcheck@2.0.0
+
+      - name: Run tests
+        run: ./tests/run
