ci: generate release notes from changelog in release workflow

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -10,32 +10,26 @@ name: Release
 on:
   push:
     tags:
-      - "v*"
-  workflow_dispatch:
-    inputs:
-      tag:
-        description: "Tag to release (e.g. v1.1.1)"
-        required: true
-        type: string
+      - "v*.*.*"
 
 permissions:
   contents: write
 
 jobs:
   release:
-    name: Create release
+    name: Create GitHub Release
     runs-on: ubuntu-slim
-    env:
-      ORG_NAME: ${{ github.event.repository.owner.login }}
-      REPO_NAME: ${{ github.event.repository.name }}
-      TAG_NAME: ${{ inputs.tag || github.ref_name }}
 
     steps:
-      - name: Checkout repository at tag
-        uses: actions/checkout@v6
+      - uses: actions/checkout@v6
+
+      - name: Generate release notes
+        id: release_notes
+        uses: octivi/release-notes-from-changelog@v1
         with:
-          fetch-depth: 0
-          ref: refs/tags/${{ env.TAG_NAME }} # checkout a tag, even for workflow_dispatch
+          tag: ${{ github.ref_name }}
+          changelog: CHANGELOG.md
+          release_notes: release-notes.md
 
       - name: Generate SHA256 checksum
         run: |
@@ -43,10 +37,35 @@ jobs:
           sha256sum octivi-bash-boilerplate-header > octivi-bash-boilerplate-header.sha256
           sha256sum octivi-bash-boilerplate-update > octivi-bash-boilerplate-update.sha256
 
+      - name: Append install instructions to release notes
+        run: |
+          cat <<EOF >> "${{ steps.release_notes.outputs.release_notes }}"
+
+          ## Install
+
+          ```bash
+          curl -fsSLO "https://github.com/${{ github.event.repository.owner.login }}/${{ github.event.repository.name }}/releases/download/${{ github.ref_name }}/octivi-bash-boilerplate" \
+            && curl -fsSLO "https://github.com/${{ github.event.repository.owner.login }}/${{ github.event.repository.name }}/releases/download/${{ github.ref_name }}/octivi-bash-boilerplate-header" \
+            && curl -fsSLO "https://github.com/${{ github.event.repository.owner.login }}/${{ github.event.repository.name }}/releases/download/${{ github.ref_name }}/octivi-bash-boilerplate-update" \
+            && curl -fsSL "https://github.com/${{ github.event.repository.owner.login }}/${{ github.event.repository.name }}/releases/download/${{ github.ref_name }}/octivi-bash-boilerplate.sha256" \
+            | sha256sum -c - \
+            && curl -fsSL "https://github.com/${{ github.event.repository.owner.login }}/${{ github.event.repository.name }}/releases/download/${{ github.ref_name }}/octivi-bash-boilerplate-header.sha256" \
+            | sha256sum -c - \
+            && curl -fsSL "https://github.com/${{ github.event.repository.owner.login }}/${{ github.event.repository.name }}/releases/download/${{ github.ref_name }}/octivi-bash-boilerplate-update.sha256" \
+            | sha256sum -c - \
+            && sudo install -m 0644 octivi-bash-boilerplate /usr/local/share/octivi-bash-boilerplate \
+            && sudo install -m 0644 octivi-bash-boilerplate-header /usr/local/share/octivi-bash-boilerplate-header \
+            && sudo install -m 0755 octivi-bash-boilerplate-update /usr/local/share/octivi-bash-boilerplate-update \
+            || { echo "Checksum verification failed; aborting installation." >&2; exit 1; }
+          ```
+          EOF
+
       - name: Publish release
         uses: softprops/action-gh-release@v2
         with:
-          tag_name: ${{ env.TAG_NAME }}
+          tag_name: ${{ github.ref_name }}
+          body_path: ${{ steps.release_notes.outputs.release_notes }}
+          generate_release_notes: false
           files: |
             ./octivi-bash-boilerplate
             ./octivi-bash-boilerplate.sha256
@@ -54,25 +73,6 @@ jobs:
             ./octivi-bash-boilerplate-header.sha256
             ./octivi-bash-boilerplate-update
             ./octivi-bash-boilerplate-update.sha256
-          body: |
-            ## Install
-
-            ```bash
-            curl -fsSLO "https://github.com/${{ env.ORG_NAME }}/${{ env.REPO_NAME }}/releases/download/${{ env.TAG_NAME }}/octivi-bash-boilerplate" \
-              && curl -fsSLO "https://github.com/${{ env.ORG_NAME }}/${{ env.REPO_NAME }}/releases/download/${{ env.TAG_NAME }}/octivi-bash-boilerplate-header" \
-              && curl -fsSLO "https://github.com/${{ env.ORG_NAME }}/${{ env.REPO_NAME }}/releases/download/${{ env.TAG_NAME }}/octivi-bash-boilerplate-update" \
-              && curl -fsSL "https://github.com/${{ env.ORG_NAME }}/${{ env.REPO_NAME }}/releases/download/${{ env.TAG_NAME }}/octivi-bash-boilerplate.sha256" \
-              | sha256sum -c - \
-              && curl -fsSL "https://github.com/${{ env.ORG_NAME }}/${{ env.REPO_NAME }}/releases/download/${{ env.TAG_NAME }}/octivi-bash-boilerplate-header.sha256" \
-              | sha256sum -c - \
-              && curl -fsSL "https://github.com/${{ env.ORG_NAME }}/${{ env.REPO_NAME }}/releases/download/${{ env.TAG_NAME }}/octivi-bash-boilerplate-update.sha256" \
-              | sha256sum -c - \
-              && sudo install -m 0644 octivi-bash-boilerplate /usr/local/share/octivi-bash-boilerplate \
-              && sudo install -m 0644 octivi-bash-boilerplate-header /usr/local/share/octivi-bash-boilerplate-header \
-              && sudo install -m 0755 octivi-bash-boilerplate-update /usr/local/share/octivi-bash-boilerplate-update \
-              || { echo "Checksum verification failed; aborting installation." >&2; exit 1; }
-            ```
-          generate_release_notes: true
           fail_on_unmatched_files: true
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
