fix(ci): preserve install code block in generated release notes

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -39,7 +39,7 @@ jobs:
 
       - name: Append install instructions to release notes
         run: |
-          cat <<EOF >> "${{ steps.release_notes.outputs.release_notes }}"
+          cat <<'EOF' >> "${{ steps.release_notes.outputs.release_notes }}"
 
           ## Install
 
