--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -27,5 +27,8 @@ jobs:
       - name: Run ShellCheck
         uses: ludeeus/action-shellcheck@2.0.0
 
+      - name: Run skill validation
+        run: ./tests/validate-skills
+
       - name: Run tests
         run: ./tests/run
