chore: add manual trigger to skill template workflow

--- a/.github/workflows/generate-skill-templates.yml
+++ b/.github/workflows/generate-skill-templates.yml
@@ -10,13 +10,14 @@ name: Generate Skill Templates
 on:
   push:
     branches:
-      - '**'
+      - "**"
     paths:
       - octivi-bash-boilerplate
       - octivi-bash-boilerplate-header
       - octivi-bash-boilerplate-update
     tags-ignore:
-      - '**'
+      - "**"
+  workflow_dispatch:
 
 permissions:
   contents: write
